--- a/css/styles.css
+++ b/css/styles.css
@@ -91,4 +91,10 @@ body {
 .roll:hover {
 	border: 2px solid #ffffff;
 }
+
+#victory {
+    color: #658911;
+    font-size: 1.5em;
+    font-weight: 900;
+}
 /* GamePlay */
